--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#000</color>
 
     <!-- default colors -->
-    <color name="defaultWhite">#fff</color>
-    <color name="defaultBlack">#000</color>
+    <color name="colorWhite">#fff</color>
+    <color name="colorBlack">#000</color>
 </resources>
