--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background"
+    android:baselineAligned="false"
     android:orientation="horizontal"
     tools:context="com.bobbiny.cordcalculator.main.MainActivity">
 
@@ -79,9 +80,9 @@
         <TextView
             android:id="@+id/calculator_text_view"
             style="@style/basicTextStyle"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/small_value"
             android:text="@string/calculator_string"
-            android:textSize="@dimen/calculator_text_size"
+            android:textSize="@dimen/title_text_size"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
