--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -12,7 +12,7 @@
         style="@style/basicTextStyle"
         android:fontFamily="@font/lato"
         android:text="@string/welcome_text"
-        android:textSize="@dimen/welcome_text_size"
+        android:textSize="@dimen/header_text_size"
         app:layout_constraintBottom_toTopOf="@+id/full_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
