--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- General values -->
-    <dimen name="rounded_button_drawable_padding">12dp</dimen>
-    <dimen name="rounded_button_drawable_radius">25dp</dimen>
     <!-- Spacing -->
     <dimen name="zero_value">0dp</dimen>
     <dimen name="small_value">8dp</dimen>
     <dimen name="mid_value">16dp</dimen>
 
     <!-- Text size -->
-    <dimen name="welcome_text_size">48sp</dimen>
+    <dimen name="header_text_size">48sp</dimen>
+    <dimen name="title_text_size">34sp</dimen>
     <dimen name="regular_text_size">24sp</dimen>
+
+    <!-- Other -->
+    <dimen name="rounded_button_drawable_padding">12dp</dimen>
+    <dimen name="rounded_button_drawable_radius">25dp</dimen>
 
     <!-- "Welcome" screen -->
     <dimen name="welcome_logo_width">250dp</dimen>
@@ -23,21 +26,11 @@
     <!-- Main Activity screen -->
     <dimen name="bookmark_image_width">130dp</dimen>
     <dimen name="bookmark_image_height">120dp</dimen>
-    <dimen name="bookmark_image_margin">18dp</dimen>
     <dimen name="dashed_line_width">1dp</dimen>
     <dimen name="dashed_line_margin_bottom">8dp</dimen>
     <dimen name="step_image_size">50dp</dimen>
     <dimen name="step_image_margin_top">32dp</dimen>
 
-    <dimen name="calculator_text_size">34sp</dimen>
-    <dimen name="calculator_padding_left">20dp</dimen>
     <dimen name="underline_view_height">3dp</dimen>
-
-    <dimen name="view_flipper_width">190dp</dimen>
-    <dimen name="question_text_size">24dp</dimen>
-    <dimen name="checkbox_text_size">20dp</dimen>
-
-    <dimen name="arrow_image_size">40dp</dimen>
-    <dimen name="arrow_button_margin_top">48dp</dimen>
 
 </resources>
