--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -9,7 +9,8 @@
     <!-- Text size -->
     <dimen name="header_text_size">48sp</dimen>
     <dimen name="title_text_size">34sp</dimen>
-    <dimen name="regular_text_size">24sp</dimen>
+    <dimen name="question_text_size">20sp</dimen>
+    <dimen name="regular_text_size">16sp</dimen>
 
     <!-- Other -->
     <dimen name="rounded_button_drawable_padding">12dp</dimen>
