Refactored project to contain single activity, refactored package structure

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,159 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-
-    <data>
-
-        <variable
-            name="handler"
-            type="com.bobbiny.cordcalculator.utils.Handler" />
-
-        <variable
-            name="navController"
-            type="androidx.navigation.NavController" />
-    </data>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/gradient_background"
-        android:baselineAligned="false"
-        android:orientation="horizontal"
-        tools:context="com.bobbiny.cordcalculator.main.MainActivity">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingStart="@dimen/small_value"
-            android:paddingEnd="@dimen/small_value">
-
-            <View
-                android:id="@+id/dashed_line"
-                android:layout_width="@dimen/dashed_line_width"
-                android:layout_height="@dimen/zero_value"
-                android:layout_marginBottom="@dimen/dashed_line_margin_bottom"
-                android:background="@color/colorBlack"
-                app:layout_constraintBottom_toBottomOf="@id/image_step_four"
-                app:layout_constraintEnd_toEndOf="@id/bookmark_image"
-                app:layout_constraintStart_toStartOf="@id/bookmark_image"
-                app:layout_constraintTop_toTopOf="@id/bookmark_image" />
-
-            <ImageView
-                android:id="@+id/bookmark_image"
-                android:layout_width="@dimen/bookmark_image_width"
-                android:layout_height="@dimen/bookmark_image_height"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/bookmark_image_description"
-                android:scaleType="fitCenter"
-                android:src="@drawable/image_bookmark"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/image_step_one"
-                style="@style/image_step_number"
-                android:contentDescription="@string/step_image_description"
-                app:layout_constraintEnd_toEndOf="@id/bookmark_image"
-                app:layout_constraintStart_toStartOf="@id/bookmark_image"
-                app:layout_constraintTop_toBottomOf="@id/bookmark_image" />
-
-            <ImageView
-                android:id="@+id/image_step_two"
-                style="@style/image_step_number"
-                android:contentDescription="@string/step_image_description"
-                app:layout_constraintEnd_toEndOf="@id/bookmark_image"
-                app:layout_constraintStart_toStartOf="@id/bookmark_image"
-                app:layout_constraintTop_toBottomOf="@id/image_step_one" />
-
-            <ImageView
-                android:id="@+id/image_step_three"
-                style="@style/image_step_number"
-                android:contentDescription="@string/step_image_description"
-                app:layout_constraintEnd_toEndOf="@id/bookmark_image"
-                app:layout_constraintStart_toStartOf="@id/bookmark_image"
-                app:layout_constraintTop_toBottomOf="@id/image_step_two" />
-
-            <ImageView
-                android:id="@+id/image_step_four"
-                style="@style/image_step_number"
-                android:contentDescription="@string/step_image_description"
-                app:layout_constraintEnd_toEndOf="@id/bookmark_image"
-                app:layout_constraintStart_toStartOf="@id/bookmark_image"
-                app:layout_constraintTop_toBottomOf="@id/image_step_three" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/calculator_text_view"
-                style="@style/basicTextStyle"
-                android:layout_marginStart="@dimen/small_value"
-                android:text="@string/calculator_string"
-                android:textSize="@dimen/title_text_size"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.15" />
-
-            <View
-                android:id="@+id/underline_view"
-                android:layout_width="@dimen/zero_value"
-                android:layout_height="@dimen/underline_view_height"
-                android:layout_marginTop="@dimen/small_value"
-                android:background="@color/colorBlack"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/calculator_text_view"
-                app:layout_constraintTop_toBottomOf="@id/calculator_text_view" />
-
-            <fragment
-                android:id="@+id/nav_host_fragment"
-                android:name="androidx.navigation.fragment.NavHostFragment"
-                android:layout_width="0dp"
-                android:layout_height="300dp"
-                android:layout_margin="16dp"
-                android:layout_weight="1"
-                app:defaultNavHost="true"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/underline_view"
-                app:navGraph="@navigation/nav_graph" />
-
-            <ImageView
-                android:id="@+id/image_button_previous"
-                android:layout_width="wrap_content"
-                android:layout_height="55dp"
-                android:adjustViewBounds="true"
-                android:onClick="@{(v) -> handler.onClickPreviousStep(v, imageButtonNext, navController)}"
-                android:padding="@dimen/small_value"
-                android:src="@drawable/image_arrow_left"
-                android:visibility="invisible"
-                app:layout_constraintEnd_toStartOf="@+id/image_button_next"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/nav_host_fragment" />
-
-            <ImageView
-                android:id="@+id/image_button_next"
-                android:layout_width="wrap_content"
-                android:layout_height="55dp"
-                android:adjustViewBounds="true"
-                android:onClick="@{(v) -> handler.onClickNextStep(v, imageButtonPrevious, navController)}"
-                android:padding="@dimen/small_value"
-                android:src="@drawable/image_arrow_right"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/image_button_previous"
-                app:layout_constraintTop_toBottomOf="@id/nav_host_fragment" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </LinearLayout>
-
-</layout>
-
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_host_fragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:defaultNavHost="true"
+    app:navGraph="@navigation/nav_graph"
+    tools:context="com.bobbiny.cordcalculator.mainNavHost.MainActivity" />
