--- a/app/src/main/res/layout/fragment_second_step.xml
+++ b/app/src/main/res/layout/fragment_second_step.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bobbiny.cordcalculator.stepFragments.second.SecondStepFragment">
+    tools:context="com.bobbiny.cordcalculator.nestedNavHost.secondFragment.SecondStepFragment">
 
     <TextView
         android:id="@+id/textView"
